fixed template preview being slightly off-screen

--- a/blocks/wizard/wizard.css
+++ b/blocks/wizard/wizard.css
@@ -168,7 +168,7 @@
     top: 64px;
     left: 0;
     right: 0;
-    height: 100vh;
+    height: calc(100vh - var(--header-height));
     width: 100vw;
     border: none;
     background-color: var(--white);
